Configuring PF policy to add Verify - also quick test to VT styling

--- a/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
+++ b/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
@@ -21,6 +21,14 @@ is not recommended as it may interfere with expected server behavior.
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="x-ua-compatible" content="IE=edge"/>
+
+    <!-- adding for BXFinance styling -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/login.css">
+    <!-- END OF -->
+
+
     <script src="assets/scripts/jquery-3.5.1.min.js"></script>
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"/>
@@ -49,9 +57,15 @@ is not recommended as it may interfere with expected server behavior.
         <div class="page__content">
             <div class="card card--no-padding">
                 <div class="card__content">
-                    <div class="org-logo"><img class="org-logo__image"
+                    <div class="org-logo">
+                        <!-- <img class="org-logo__image"
                                                src="assets/images/ping-logo.svg"
-                                               alt="Company Logo"/></div>
+                                               alt="Company Logo"/> -->
+                         <!-- adding for BXFinance styling -->
+                            <img src="assets/images/logo.svg" class="logo" />
+                        <!-- END OF-->
+                                            
+                                            </div>
                     <div id="verificationData" class="stack stack--large" data-id="stack">
                         <div class="stack stack--small">
                             <h1 class="heading" data-id="heading">
