--- a/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
+++ b/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
@@ -52,7 +52,7 @@ is not recommended as it may interfere with expected server behavior.
 </head>
 
 <body>
-<div class="app-container">
+<div class="card card-register" style="margin:auto; width:50%; font-family:Rubik">
     <div class="page brand-background" data-id="page">
         <div class="page__content">
             <div class="card card--no-padding">
@@ -112,12 +112,10 @@ is not recommended as it may interfere with expected server behavior.
                 </div>
             </div>
         </div>
-        <div class="page__footer">
-            <div class="ping-footer">
-                <div class="ping-credits"></div>
-                <div class="ping-copyright">$templateMessages.getMessage("global.footerMessage")</div>
-            </div>
-        </div>
+
+       
+
+
     </div>
 </div>
 
