--- a/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
+++ b/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
@@ -66,7 +66,7 @@ is not recommended as it may interfere with expected server behavior.
                         <!-- END OF-->
                                             
                                             </div>
-                    <div id="verificationData" class="stack stack--large" data-id="stack">
+                    <div id="verificationData" class="stack stack--large" data-id="stack" style="font-family:Rubik">
                         <div class="stack stack--small">
                             <h1 class="heading" data-id="heading">
                                 $languagePackMessages.getMessage($messageKeyPrefix, "header")
