Yeah yeah bad code on Remys part - FIXED IT

--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -60,8 +60,9 @@ and any other locale specific properties files, the localized value can be added
     <div class="ping-header">
         <span class="company-logo"><!-- client company logo here --></span>
         #if($title)
-          $Encode.forHtml($title) WOOOOO PARRYYYYTTYTYTYTYTYTYT
+          $Encode.forHtml($title) 
         #end
+        WOOOOO PARRYYYYTTYTYTYTYTYTYT
     </div><!-- .ping-header -->
     
     <div class="ping-body-container">
