--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -46,6 +46,14 @@ and any other locale specific properties files, the localized value can be added
     <meta name="robots" content="noindex, nofollow" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+     <!-- adding for BXFinance styling -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/css/styles.css">
+     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/css/login.css">
+     <!-- END OF -->
+
+
     <link rel="stylesheet" type="text/css" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/main.css"/>
 </head>
 
@@ -58,7 +66,10 @@ and any other locale specific properties files, the localized value can be added
     then 'has-logo' class should be added to 'ping-header' container.
     -->
     <div class="ping-header">
-        <span class="company-logo"><!-- client company logo here --></span>
+        <span class="company-logo"><!-- client company logo here -->
+            <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/images/logo.svg" class="logo" />
+        
+        </span>
         #if($title)
           $Encode.forHtml($title) 
         #end
