--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -49,8 +49,8 @@ and any other locale specific properties files, the localized value can be added
 
      <!-- adding for BXFinance styling -->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/css/styles.css">
-     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/css/login.css">
+     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/styles.css">
+     <link rel="stylesheet" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/login.css">
      <!-- END OF -->
 
 
@@ -67,7 +67,7 @@ and any other locale specific properties files, the localized value can be added
     -->
     <div class="ping-header">
         <span class="company-logo"><!-- client company logo here -->
-            <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)assets/images/logo.svg" class="logo" />
+            <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/images/logo.svg" class="logo" />
         
         </span>
         #if($title)
