--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -70,6 +70,8 @@ and any other locale specific properties files, the localized value can be added
             <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/images/logo.svg" class="logo" />
         
         </span>
+        <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/images/logo.svg" class="logo" />
+        
         #if($title)
           $Encode.forHtml($title) 
         #end
