--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -57,7 +57,7 @@ and any other locale specific properties files, the localized value can be added
     <link rel="stylesheet" type="text/css" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/main.css"/>
 </head>
 
-<body>
+<body class="card card-register" style="margin:auto; width:50%; font-family:Rubik">
     
 <div class="ping-container">
     
