--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -57,7 +57,7 @@ and any other locale specific properties files, the localized value can be added
     <link rel="stylesheet" type="text/css" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/main.css"/>
 </head>
 
-<body class="card card-register" style="margin:auto; width:50%; font-family:Rubik">
+<body>
     
 <div class="ping-container">
     
@@ -72,13 +72,13 @@ and any other locale specific properties files, the localized value can be added
         </span>
         <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/images/logo.svg" class="logo" />
         
-        #if($title)
+        <!-- #if($title)
           $Encode.forHtml($title) 
-        #end
+        #end -->
         
     </div><!-- .ping-header -->
     
-    <div class="ping-body-container">
+    <div class="class="card card-register" style="margin:auto; width:50%; font-family:Rubik"">
 
         <div class="section-title">
             #if(${header})
