--- a/profiles/pingaccess/instance/conf/template/general.error.page.template.html
+++ b/profiles/pingaccess/instance/conf/template/general.error.page.template.html
@@ -57,15 +57,15 @@ and any other locale specific properties files, the localized value can be added
     <link rel="stylesheet" type="text/css" href="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/css/main.css"/>
 </head>
 
-<body class="card card-register" style="margin:auto; width:50%; font-family:Rubik">
+<body >
     
-<div class="ping-container">
+<div class="card card-register" style="margin:auto; width:50%; font-family:Rubik">
     
     <!-- 
     if there is a logo present in the 'company-logo' container,
     then 'has-logo' class should be added to 'ping-header' container.
     -->
-    <div class="ping-header">
+    <div class="card-header">
         <span class="company-logo"><!-- client company logo here -->
             <img src="$Encode.forHtmlAttribute($reservedApplicationContextRoot)/assets/images/logo.svg" class="logo" />
         
