--- a/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
+++ b/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-required.html
@@ -103,7 +103,7 @@ is not recommended as it may interfere with expected server behavior.
                     </div>
                     <div id="spinner" style="display: none;">
                         <div class="spinner spinner--margin-bottom-small">
-                            <div class="spinner__icon" data-id="spinner"></div>
+                            <!--<div class="spinner__icon" data-id="spinner"></div>-->
                         </div>
                         <h1 class="heading" data-id="heading" style="font-family:Rubik">
                             $languagePackMessages.getMessage($messageKeyPrefix, "in.progress")
