--- a/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-timed-out.html
+++ b/profiles/pingfederate/instance/server/default/conf/template/pingone-verify-timed-out.html
@@ -72,6 +72,7 @@ is not recommended as it may interfere with expected server behavior.
                         <div class="text-block--overflow-wrap">
                             <div class="stack" data-id="stack">
                                 <div><button class="button file-input--button button--primary brand-primary-bg" data-id="button" type="button" onclick="retry()">$languagePackMessages.getMessage($messageKeyPrefix, "retry.button.title")</button></div>
+                                <!-- changed onclick to self.close to support our new tab/window use case for credit card application -->
                                 <a tabindex="0" data-id="content-link" target="_self" class="anchor" onclick="self.close()">$languagePackMessages.getMessage($messageKeyPrefix, "cancel.button.title")</a>
                             </div>
                         </div>
